--- a/css/member.css
+++ b/css/member.css
@@ -793,10 +793,6 @@ header ul li:nth-child(5):after {
   margin-right: 30px;
 }
 
-.right .leftselect img {
-  width: 100%;
-}
-
 .right .leftselect .leftlist {
   width: 100%;
 }
@@ -820,7 +816,7 @@ header ul li:nth-child(5):after {
 }
 
 .right .leftselect .leftbottom {
-  margin-bottom: 260px;
+  margin-bottom: 150px;
 }
 
 .right .smalllist {
@@ -831,6 +827,21 @@ header ul li:nth-child(5):after {
   width: 76%;
   float: left;
   padding-bottom: 50px;
+}
+
+.right .content input:focus {
+  border: 1px solid #EAAF88;
+  box-shadow: 0 0 10px #8d5b33;
+}
+
+.right .content textarea {
+  resize: none;
+}
+
+.right .content textarea:focus {
+  border: 1px solid #EAAF88;
+  box-shadow: 0 0 10px #8d5b33;
+  height: 200px;
 }
 
 .right .content h4 {
@@ -869,7 +880,6 @@ header ul li:nth-child(5):after {
 .right .content .memInfo form td input {
   width: 90%;
   height: 30px;
-  border: none;
 }
 
 .right .content .memOrderlist {
